--- a/javascript/taskDom2/taskDom02.css
+++ b/javascript/taskDom2/taskDom02.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-around;
     margin-top: 50px;
-    
 }
 .search{
     width: 800px;
@@ -27,8 +26,8 @@ span{
 }
 li{
     cursor: pointer;
-    padding: 5px 0px;
-
+    text-align: center;
+    margin-top: 5px;
 }
 .container{
     width: 300px;
@@ -46,4 +45,8 @@ li{
 }
 .selected{
     background-color: blue;
+}
+#listText1,#listText2,#listText3 {
+    padding: 0;
+    margin: 30px 0;
 }
