--- a/javascript/taskDom2/taskDom06.css
+++ b/javascript/taskDom2/taskDom06.css
@@ -5,22 +5,39 @@
 .slide img{
     width: 100%;
 }
-.prev, .next {
+#controls {
+  position: absolute;
+  top: 50%;
+  width: 49.4%;
+  display: flex;
+  justify-content: space-between;
+  }
+  .active {
+    display: flex;
+  }
+  
+  .item {
+    width: calc(100% / 6);
+    height: 80px;
+    flex-shrink: 0;
     cursor: pointer;
-    position: absolute;
-    top: 45%;
-    width: auto;
-    padding: 16px;
+  }
+  
+  .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  } 
+  #controls button {
     color: white;
-    font-weight: bold;
     font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+    background: none;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 12px;
+    transition: background 250ms ease;
   }
-  .next {
-    right: 25.4%;
-    border-radius: 3px 0 0 3px;
-  }
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
+  
+  #controls button:hover, #controls button:focus {
+    background: black;
   }
